# lgtv-ip-control

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: basic.rs
src/: encryption.rs  lg_tv.rs  lib.rs  tcp_connection.rs
src/constants/: default_settings.rs  errors.rs  mod.rs  types.rs
src/examples/: basic.rs
