[package]
name = "lgtv-ip-control"
version = "0.1.0"
edition = "2024"
description = "A Rust crate for controlling LG TVs over the network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MaxKortelov/lgtv-ip-control"
homepage = "https://github.com/MaxKortelov/lgtv-ip-control"
documentation = "https://docs.rs/lgtv-ip-control"
readme = "README.md"
keywords = ["lg", "tv", "webos", "remote", "iot"]
categories = ["api-bindings", "network-programming"]
exclude = [
    "target/",
    ".idea/",
    ".github/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
rand = "0.8.6"
openssl = "0.10.78"
thiserror = "2"
trait-variant = "0.1.2"